# mt-github-dev-metrics

./: .env.example  .envrc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
github_dev_metrics/: __init__.py  cli.py  collectors.py  github_client.py  metrics.py  models.py  report_csv.py  report_json.py  report_markdown.py  web_app.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: bootstrap_venv.py  install.sh
tests/: test_cli.py  test_collectors.py  test_github_client.py  test_metrics.py  test_report_csv.py  test_report_markdown.py  test_web_app.py
