[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-dev-metrics"
version = "0.1.0"
description = "Collect GitHub developer activity metrics for reports and engineering reviews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
github-dev-metrics = "github_dev_metrics.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["github_dev_metrics*"]
